# web-compiler

./: CMakeLists.txt  README.md
example/: main.mcx
src/: main.cpp
src/helpers/: helpers.cpp  helpers.h
src/lexer/: lexer.cpp  lexer.h
src/token/: token.cpp  token.h
src/validators/: validators.cpp  validators.h
test/: CMakeLists.txt  example_test.cpp
